<resources>
    <string name="app_name">RecipeApp</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>

    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="step">Step</string>


    <!--Required-->
    <string name="required_text">Required</string>
    <string name="permisiton_denied">Permission is denied</string>
    <string name="add_success">Create New Recipe Successfully</string>
    <string name="update_success">Update Recipe Successfully</string>
    <string name="delete_success">Delete New Recipe Successfully</string>
    <string name="select_recipe_type">Please select type</string>


</resources>
